yamls/infra-pipeline/hml/Deployment_infra-pipeline3-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-pipeline3-deploy
  namespace: infra-pipeline-hml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infra-pipeline3
  template:
    metadata:
      annotations:
        prometheus.io/port: "9404"
        prometheus.io/scrape: "false"
      labels:
        app: infra-pipeline3
    spec:
      containers:
        - image: nginx:1.20.1-alpine
          imagePullPolicy: IfNotPresent
          name: infra-pipeline3
          ports:
            - containerPort: 80
