yamls/infra-pipeline/hml/Service_infra-pipeline2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-pipeline2-service
  namespace: infra-pipeline-hml
spec:
  ports:
    - name: svc-port
      port: 80
      targetPort: 90
  selector:
    app: infra-pipeline2
